--- a/Naive Bayes real program 1BM8CS058/LAB4.ipynb
+++ b/Naive Bayes real program 1BM8CS058/LAB4.ipynb
@@ -1,39 +1,83 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python383jvsc74a57bd070a8f8eae77aa0782808e6cfd2856706ff3a57d0cd6b26c7758c1e171a3508dc",
-   "display_name": "Python 3.8.3 32-bit"
-  },
-  "metadata": {
-   "interpreter": {
-    "hash": "70a8f8eae77aa0782808e6cfd2856706ff3a57d0cd6b26c7758c1e171a3508dc"
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PlayTennis</th>\n",
+       "      <th>Outlook</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Wind</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>No</td>\n",
+       "      <td>Sunny</td>\n",
+       "      <td>Hot</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Weak</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>No</td>\n",
+       "      <td>Sunny</td>\n",
+       "      <td>Hot</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Strong</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Overcast</td>\n",
+       "      <td>Hot</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Weak</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Rain</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Weak</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Rain</td>\n",
+       "      <td>Cool</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Weak</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "  PlayTennis   Outlook Temperature Humidity    Wind\n",
        "0         No     Sunny         Hot     High    Weak\n",
@@ -41,11 +85,11 @@
        "2        Yes  Overcast         Hot     High    Weak\n",
        "3        Yes      Rain        Mild     High    Weak\n",
        "4        Yes      Rain        Cool   Normal    Weak"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PlayTennis</th>\n      <th>Outlook</th>\n      <th>Temperature</th>\n      <th>Humidity</th>\n      <th>Wind</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>No</td>\n      <td>Sunny</td>\n      <td>Hot</td>\n      <td>High</td>\n      <td>Weak</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>No</td>\n      <td>Sunny</td>\n      <td>Hot</td>\n      <td>High</td>\n      <td>Strong</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Yes</td>\n      <td>Overcast</td>\n      <td>Hot</td>\n      <td>High</td>\n      <td>Weak</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Yes</td>\n      <td>Rain</td>\n      <td>Mild</td>\n      <td>High</td>\n      <td>Weak</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Yes</td>\n      <td>Rain</td>\n      <td>Cool</td>\n      <td>Normal</td>\n      <td>Weak</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      ]
      },
+     "execution_count": 1,
      "metadata": {},
-     "execution_count": 21
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -57,14 +101,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Target Values: ['No', 'No', 'Yes', 'Yes', 'Yes', 'No', 'Yes', 'No', 'Yes', 'Yes', 'Yes', 'Yes', 'Yes', 'No']\nFeatures: \n[['Sunny' 'Hot' 'High' 'Weak']\n ['Sunny' 'Hot' 'High' 'Strong']\n ['Overcast' 'Hot' 'High' 'Weak']\n ['Rain' 'Mild' 'High' 'Weak']\n ['Rain' 'Cool' 'Normal' 'Weak']\n ['Rain' 'Cool' 'Normal' 'Strong']\n ['Overcast' 'Cool' 'Normal' 'Strong']\n ['Sunny' 'Mild' 'High' 'Weak']\n ['Sunny' 'Cool' 'Normal' 'Weak']\n ['Rain' 'Mild' 'Normal' 'Weak']\n ['Sunny' 'Mild' 'Normal' 'Strong']\n ['Overcast' 'Mild' 'High' 'Strong']\n ['Overcast' 'Hot' 'Normal' 'Weak']\n ['Rain' 'Mild' 'High' 'Strong']]\n"
+      "Target Values: ['No', 'No', 'Yes', 'Yes', 'Yes', 'No', 'Yes', 'No', 'Yes', 'Yes', 'Yes', 'Yes', 'Yes', 'No']\n",
+      "Features: \n",
+      "[['Sunny' 'Hot' 'High' 'Weak']\n",
+      " ['Sunny' 'Hot' 'High' 'Strong']\n",
+      " ['Overcast' 'Hot' 'High' 'Weak']\n",
+      " ['Rain' 'Mild' 'High' 'Weak']\n",
+      " ['Rain' 'Cool' 'Normal' 'Weak']\n",
+      " ['Rain' 'Cool' 'Normal' 'Strong']\n",
+      " ['Overcast' 'Cool' 'Normal' 'Strong']\n",
+      " ['Sunny' 'Mild' 'High' 'Weak']\n",
+      " ['Sunny' 'Cool' 'Normal' 'Weak']\n",
+      " ['Rain' 'Mild' 'Normal' 'Weak']\n",
+      " ['Sunny' 'Mild' 'Normal' 'Strong']\n",
+      " ['Overcast' 'Mild' 'High' 'Strong']\n",
+      " ['Overcast' 'Hot' 'Normal' 'Weak']\n",
+      " ['Rain' 'Mild' 'High' 'Strong']]\n"
      ]
     }
    ],
@@ -78,14 +137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Number of instances in training set: 8\nNumber of instances in testing set: 6\n"
+      "Number of instances in training set: 8\n",
+      "Number of instances in testing set: 6\n"
      ]
     }
    ],
@@ -103,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,14 +220,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Predicted values: ['No', 'Yes', 'No', 'Yes', 'Yes', 'No']\nActual values: ['Yes', 'Yes', 'Yes', 'Yes', 'Yes', 'No']\n\nTotal number of testing instances in the dataset: 6\nNumber of correct predictions: 4\nNumber of wrong predictions: 2\n\nAccuracy of Bayes Classifier: 0.6666666666666666\n"
+      "Predicted values: ['No', 'Yes', 'No', 'Yes', 'Yes', 'No']\n",
+      "Actual values: ['Yes', 'Yes', 'Yes', 'Yes', 'Yes', 'No']\n",
+      "\n",
+      "Total number of testing instances in the dataset: 6\n",
+      "Number of correct predictions: 4\n",
+      "Number of wrong predictions: 2\n",
+      "\n",
+      "Accuracy of Bayes Classifier: 0.6666666666666666\n"
      ]
     }
    ],
@@ -198,6 +265,39 @@
     "print()\n",
     "print('Accuracy of Bayes Classifier:', good/total_cases)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "70a8f8eae77aa0782808e6cfd2856706ff3a57d0cd6b26c7758c1e171a3508dc"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
